<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="246dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimaryDark"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_send"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tvSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="263dp"
        android:elevation="16dp"
        android:visibility="invisible"
        android:text="@string/send"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="176dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimaryDark"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_save"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="193dp"
        android:elevation="16dp"
        android:text="@string/save"
        android:visibility="invisible"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="106dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimaryDark"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_clear_all"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tvClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="123dp"
        android:elevation="16dp"
        android:visibility="invisible"
        android:text="@string/clear"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

</RelativeLayout>